--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-ui
 # Puedes acceder a la consola H2 en http://localhost:puerto/h2-ui
 # Reemplaza "puerto" por el puerto en el que se está ejecutando tu aplicación Spring Boot.
+
+# swagger-ui custom path
+springdoc.swagger-ui.path=/swagger-ui.html
